move angular files into angular folder

--- a/AngularJS/Login-Asp-Admin/index.html
+++ b/AngularJS/Login-Asp-Admin/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html ng-app="app">
-<head>
+<head><!-- Vista principal, aqui se referencian los js del proyecto-->
     <meta charset="utf-8" />
     <title>FarmaTica Admin</title>
-    <link rel="stylesheet" href="Bootstrap/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="Bootstrap/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"> <!-- Y tambien bootstrap -->
 
     <link href="app-content/app.css" rel="stylesheet" />
 </head>
@@ -11,20 +11,23 @@
  
     <div class="jumbotron">
            <h2 > FarmaTica Administración</h2>
+           <!-- Este es un layout, por eso el titulo FarmaTica Admins se puede ver en todas las vistas-->
        </br></br></br>
         <div class="container">
             <div class="col-sm-8 col-sm-offset-2">
                 <div ng-class="{ 'alert': flash, 'alert-success': flash.type === 'success', 'alert-danger': flash.type === 'error' }" ng-if="flash" ng-bind="flash.message"></div>
                 <div ng-view></div>
-            </div>
-        </div>
+            </div><!--Incluye el flashservice -->
+        </div><!--No es ninguna vista especifica-->
     </div>
+    <!-- Bibliotecas y archivos que contiene el proyecto-->
 
     <script src="Jquery/jquery-2.0.3.min.js"></script>
     <script src="Angular/angular.js"></script>
     <script src="Angular/angular-route.js"></script>
     <script src="Angular/angular-cookies.js"></script>
     <script src="app.js"></script>
+    <!--Servicios que tiene el proyecto -->
 
     <script src="app-services/authentication.service.js"></script>
     <script src="app-services/flash.service.js"></script>
@@ -33,11 +36,9 @@
     <script type="text/javascript" src="app-services/medicamento.service.js"></script>
     <script type="text/javascript" src="pedidos/pedidos.controller.js"></script>
 
-    <!-- Real user service that uses an api -->
      <script src="app-services/user.service.js"></script> 
+    <!-- Controladores de las vistas -->
 
-    <!-- Fake user service for demo that uses local storage -->
-    <!-- <script src="app-services/user.service.local-storage.js"></script> -->
 
     <script src="home/home.controller.js"></script>
     <script src="login/login.controller.js"></script>
