--- a/AngularJS/Login-Asp-Admin/login/login.view.html
+++ b/AngularJS/Login-Asp-Admin/login/login.view.html
@@ -1,4 +1,9 @@
-﻿<div class="col-md-6 col-md-offset-3">
+﻿<!-- Este es un form, lo de input type = es el tipo de valor que se agarra, el name y el id lo puede ignorarlo -->
+<!-- El ng-model es el tipo de dato con el que se esta relacionando del modelo, esto es lo mas importante de esta parte-->
+<!-- es importante que ng.model tenga el mismo nombre que se espera en el rest api -->
+<!-- El span se muestra si se omite una entrada del formulario --> 
+
+<div class="col-md-6 col-md-offset-3">
     <h2>Login</h2>
     <form name="form" ng-submit="vm.login()" role="form">
 
