--- a/AngularJS/Login-Asp-Admin/stats/stats.view.html
+++ b/AngularJS/Login-Asp-Admin/stats/stats.view.html
@@ -1,27 +1,28 @@
 <div>
 <h3>Estadísticas para administradores</h3>
 
-
+<!-- EL {{ }} es importantisismo porque muestra valores disponibles de los controladores en las vistas -->
+<!-- adentro hay un vm. algo estos deben estae definidos en el controlador o en algun servicio inyectado -->
 <h4>Ventas totales por compania</h4>
 <p>{{vm.TotSalesPerComp}}</p>
 
-<div class="row">
+<div class="row">       <!-- Formato bonito para tablas-->
     <div class="col-md-12" >
     <nav class= "navbar navbar-default" role= "navigation" >
     <div class= "navbar-header" ></div>
     </nav>
-        <h4>Ventas nuevas</h4>
+        <h4>Ventas nuevas</h4>  <!-- titulo de tabla-->
         <table class="table table-striped table-bordered">
         <thead>
-        <th> Name&nbsp;</th>
+        <th> Name&nbsp;</th>        <!-- tiene 2 encabezados-->
         <th>AmmountSold&nbsp;</th>
         </thead>
-        <tbody>
-            <tr ng-repeat="x in vm.newSales">
-              <p>gh</p>
+        <tbody>             <!-- el vm. algo debe exisitir en el controlador o en un servicio inyectado-->
+            <tr ng-repeat="x in vm.newSales">   <!--el ng-repeat es importantisimo -->
+                                                <!--es como un for, itera en una lista -->
                 <td>{{x.Name}}</td>
                 <td>{{x.AmmountSold}}</td>
-            </tr>
+            </tr>           <!-- estos son los valores de la tabla-->
           </tbody>    
         </table>
     </div>
@@ -40,8 +41,8 @@
           <th>AmmountSold&nbsp;</th>
           </thead>
         <tbody>
-            <tr ng-repeat="y in vm.globalsSales">
-                <p>hg</p>
+            <tr ng-repeat="y in vm.globalsSales"> 
+                                                <!-- basicamento igual al anterior -->
                 <td>{{y.Name}}</td>
                 <td>{{y.AmmountSold}}</td>
             </tr> 
@@ -63,7 +64,7 @@
         </thead>
         <tbody>
             <tr ng-repeat="z in vm.salesPerCompany">
-                <p>jk</p>
+            
                 <td>{{z.Name}}</td>
                 <td>{{z.AmmountSold}}</td>
             </tr>
@@ -72,7 +73,7 @@
     </div>
 </div>
 
-
-<p>&nbsp;</p>
+                <!-- para poder cerra sesion -->
+<p>&nbsp;</p>  <!--esto es una cosa de html, no es muy importante -->
 <p><a href="#/login" class="btn btn-primary">Cerrar Sesión</a></p>
 </div>
