Varios cambios y mejoras
directiva para subir y modificar archivos, cambios en el servicio de
pedido solo de debugeo, agregar dependencias en el proyecto app.js
Modificar home controller y view (lo del pedido con prescripción)

--- a/Login-Asp-Admin/index.html
+++ b/Login-Asp-Admin/index.html
@@ -35,6 +35,7 @@
     <script type="text/javascript" src="app-services/pedido.service.js"></script>
     <script type="text/javascript" src="app-services/medicamento.service.js"></script>
     <script type="text/javascript" src="pedidos/pedidos.controller.js"></script>
+    <script type="text/javascript" src="app-services/angular-base64-upload.js" ></script>
 
      <script src="app-services/user.service.js"></script> 
     <!-- Controladores de las vistas -->
