--- a/AngularJS/Login-Asp-Admin/index.html
+++ b/AngularJS/Login-Asp-Admin/index.html
@@ -27,22 +27,31 @@
     <script src="Angular/angular-route.js"></script>
     <script src="Angular/angular-cookies.js"></script>
     <script src="app.js"></script>
-    <!--Servicios que tiene el proyecto -->
+    
+<!--Servicios que tiene el proyecto -->
 
-    <script src="app-services/authentication.service.js"></script>
-    <script src="app-services/flash.service.js"></script>
+    <script type="text/javascript" src="app-services/receta.service.js"></script>    
+    <script type="text/javascript" src="app-services/authentication.service.js"></script>
+    <script typ="text/javascript" src="app-services/doctor.service.js"></script>
+    <script type="text/javascript" src="app-services/flash.service.js"></script>
     <script type="text/javascript" src="app-services/stats.service.js"></script>
     <script type="text/javascript" src="app-services/pedido.service.js"></script>
     <script type="text/javascript" src="app-services/medicamento.service.js"></script>
-    <script type="text/javascript" src="pedidos/pedidos.controller.js"></script>
+    <script type="text/javascript" src="app-services/user.service.js"></script> 
     <script type="text/javascript" src="app-services/angular-base64-upload.js" ></script>
+    <script  type="text/javascript" src="app-services/cliente.service.js"></script>
+    <script  type="text/javascript" src="app-services/cliente.service.js"></script>   
+    <script  type="text/javascript" src="app-services/medicamento.service.js"></script>
 
-     <script src="app-services/user.service.js"></script> 
-    <!-- Controladores de las vistas -->
-
-
-    <script src="home/home.controller.js"></script>
-    <script src="login/login.controller.js"></script>
+<!--     Controladores de vistas                        -->
+<script type="text/javascript" src="doctor/doctor.controller.js"> </script>
+    <script type="text/javascript" src="cliente/cliente.controller.js"></script>
+    <script type="text/javascript" src="pedidos/pedidos.controller.js"></script>
+    <script type="text/javascript" src="home/home.controller.js"></script>
+    <script type="text/javascript" src="login/login.controller.js"></script>
     <script type="text/javascript" src="stats/stats.controller.js"></script>
+    <script type="text/javascript" src="receta/receta.controller.js"></script>
+    <script type="text/javascript" src="medicamento/medicamento.controller.js"></script>
+        
 </body>
 </html>
